# data_analysis_pipeline

./: .gitignore  behave.ini
base_csv_extractor/: requirements-dev.txt
base_csv_extractor/docs/source/: conf.py  index.rst
base_csv_extractor/quartet/: Series_4.ndjson
base_csv_extractor/src/: acquire.py  csvextract.py  model.py
base_csv_extractor/src/project_1.egg-info/: PKG-INFO
base_csv_extractor/tests/: test_model.py
project1.2/: pyproject.toml  requirements-dev.txt  requirements.txt
project1.2/docs/source/: api.rst
project1.2/src/: kaggleclient.py
project1.2/src/project1.2.egg-info/: SOURCES.txt  requires.txt
project1.2/src/project_1_2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
project_1.1/: code.puml  components.puml  config.toml  containers.puml  context.puml  logging_config.toml  pyproject.toml  requirements-dev.txt  tox.ini
project_1.1/docs/: index.rst
project_1.1/quartet/: Series_1.ndjson  Series_3.ndjson
project_1.1/src/: acquire.py  csvextract.py
project_1.1/tests/: test_model.py
project_1_1/: README.md
project_1_1/quartet/: Series_2.ndjson
project_1_1/src/: acquire.py  csvextract.py
project_1_1/tests/: test_model.py
project_1_2/: pyproject.toml  tox.ini
project_1_2/src/: csvextract.py  kaggleclient.py
project_1_2/tests/: mock_server.py  test_kaggleclient.py
web_api/: README.md  kaggle.json
web_api/src/: acquire.py  csvextract.py  kaggleclient.py
web_api/tests/: environment.py  test_kaggleclient.py
web_scrape/: pyproject.toml  requirements-dev.txt  tox.ini
web_scrape/src/: html_extract.py
(+33 files in other folders)
