[build-system]
requires = ["setuptools", "wheel"] # PEP 508 specifications.

[project]
name = "project1.2"
version = "1.0.0"
authors = [
{name = "Thapelo Magqazana", email = "tapsmcgzee8@email.com"},
]
description = "Web Api and Scraping"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
# Packages required -- None for Project Zero.
]
[project.optional-dependencies]
dev = [
# Development tools to work on this project
"sphinx==7.0.1",
"sphinxcontrib-plantuml==0.25",
"pip-tools==6.13.0"
]
test = [
# Testing tools to test this project
"pytest==7.2.0",
"tox==4.0.8",
"behave==1.2.6"
]